# lipidomics

./: data_process.r  lipidAcylBondsAnalysis.r  lipidomicLib.r  pipxAnalysis.R
.gitignore/: .gitignore
lipid analysis/hela_hbec/steiner forest/msgsteiner/: CMakeCache.txt  CMakeLists.txt  Makefile  confFile.txt  edgeFile.txt  how_to_compile.txt  ms.cpp  msgsteiner.cpp  prizeFile.txt  result_cvIntermediate_rep1k1.txt  result_cvResults_1.txt  result_edgeattributes.tsv  result_info.txt  result_nodeattributes.tsv  test.py
lipid analysis/pipx analysis/: .RData  .Rhistory  adenoma_acyl_chain.xlsx  (+14 more)
pathway analysis/: .Rhistory  C36-PIP3_tumour_most_active_pathway.xlsx  C36_PIP3_tumour_most_active_pathway.xlsx  C38-PIP3.xlsx  C38-PIP3_tumour_most_active_pathway.xlsx  C38_PIP3_tumour_most_active_pathway.xlsx  DHCer_Cer.xlsx  SM_Cer.xlsx  a.xlsx  all_active_pathway.xlsx  all_inactive_pathway.xlsx  c381.xlsx  enzyme_ranking.xlsx  findSignificantPathway.r  findSignificantPathwayByStages.r  most_active_pathway.xlsx  most_active_pathway_stage_adenoma.xlsx  most_active_pathway_stage_dukes a.xlsx  most_active_pathway_stage_dukes b.xlsx  most_active_pathway_stage_dukes c.xlsx  most_active_pathway_stage_dukes d.xlsx  most_inactive_pathway.xlsx  most_inactive_pathway_stage_adenoma.xlsx  most_inactive_pathway_stage_dukes a.xlsx  most_inactive_pathway_stage_dukes b.xlsx  most_inactive_pathway_stage_dukes c.xlsx  most_inactive_pathway_stage_dukes d.xlsx  normal.xlsx  pathwayDirection.R  significantPathway.r  significantPathwayByStage.r  tumour.xlsx  ~$most_active_pathway_stage_dukes b.xlsx
(+30 files in other folders)
